Use `difference` crate for diffing serialized output in tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ default-features = false
 
 [dev-dependencies.textwrap]
 version = "*"
-
+[dev-dependencies.difference]
+version = "*"
 
 
 # [[test]]
