--- a/obofoundry/Cargo.toml
+++ b/obofoundry/Cargo.toml
@@ -1,13 +1,23 @@
 [package]
-name = "obofoundry"
-version = "0.1.0"
-authors = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
-edition = "2018"
+name        = "obofoundry"
+version     = "0.1.0"
+authors     = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
+edition     = "2018"
+license     = "MIT"
+description = "Structures to deserialize OBO Foundry listings into."
+readme      = "README.md"
+keywords    = ["obo", "ontology", "obofoundry", "foundry", "serde"]
+categories  = []
 
-[dependencies]
-serde = { version = "*", features = ["derive"] }
+[lib]
+name = "obofoundry"
+path = "src/lib.rs"
+
+[dependencies.serde]
+version  = "1.0"
+features = ["derive"]
 
 [dev-dependencies]
-serde_yaml = "*"
-serde_json = "*"
-reqwest = "*"
+serde_yaml = "0.8"
+serde_json = "1.0"
+reqwest    = "0.9"
