--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,17 @@ edition = "2018"
 [dependencies]
 pest = "2.1.0"
 pest_derive = "2.1.0"
-failure = "*"
-url = "*"
+failure = "0.1.5"
+url = "1.7.2"
 
-[dev-dependencies.textwrap]
-version = "*"
-[dev-dependencies.difference]
-version = "*"
+[dev-dependencies]
+textwrap = "0.11.0"
+difference = "2.0.0"
 [dev-dependencies.tests-macros]
 path = "./tests-macros"
+
+[profile.bench]
+lto = true
+
+[profile.release]
+lto = true
