--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [workspace]
 members = ["fastobo-syntax"]
 
+[lib]
+path = "fastobo/lib.rs"
+
 [package]
 name = "fastobo"
 version = "0.1.0"
@@ -10,17 +13,16 @@ edition = "2018"
 # Required dependencies
 [dependencies]
 pest = "2.1.0"
-pest_derive = "2.1.0"
 failure = "0.1.5"
 url = "1.7.2"
-[dependencies.fastobo-syntax]
-path = "./fastobo-syntax"
+fastobo-syntax = { path = "./fastobo-syntax", version = "0.1.0" }
 
 [dev-dependencies]
-textwrap = "0.11.0"
-difference = "2.0.0"
-[dev-dependencies.tests-macros]
-path = "./tests-macros"
+reqwest = "*"
+lazy_static = "1.3.0"
+obofoundry = "*"
+pretty_assertions = "*"
+serde_yaml = "*"
 
 [profile.bench]
 lto = true
