--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ readme = "README.md"
 keywords = ["obo", "ontology", "obofoundry", "ast", "syntax", "parser"]
 categories   = ["science", "parser-implementations"]
 
+[package.metadata.docs.rs]
+features = ["docs"]
+
 [lib]
 name = "fastobo"
 path = "fastobo/lib.rs"
@@ -32,21 +35,18 @@ pest = "2.1.0"
 failure = "0.1.5"
 url = "1.7.2"
 fastobo-syntax = { path = "./fastobo-syntax", version = "0.1.0" }
-opaque_typedef = "0.0.4"
-opaque_typedef_macros = "0.0.4"
+opaque_typedef = "0.0.5"
+opaque_typedef_macros = "0.0.5"
 
 [dev-dependencies]
-reqwest = "*"
+reqwest = "0.9.12"
 lazy_static = "1.3.0"
-obofoundry = "*"
-pretty_assertions = "*"
-serde_yaml = "*"
+obofoundry = "0.1.2"
+pretty_assertions = "0.6.1"
+serde_yaml = "0.8.8"
 
 [profile.bench]
 lto = true
 
 [profile.release]
 lto = true
-
-[package.metadata.docs.rs]
-features = ["docs"]
