--- a/fastobo-py/fastobo/Cargo.toml
+++ b/fastobo-py/fastobo/Cargo.toml
@@ -3,6 +3,7 @@ name = "fastobo-py"
 version = "0.1.0"
 authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
 publish = false
+workspace = "../.."
 
 [lib]
 crate-type = ["cdylib"]
@@ -12,9 +13,11 @@ path = "lib.rs"
 [dependencies]
 pyo3 = { path = "/home/althonos/Code/pyo3/pyo3" }
 #pyo3 = { git = "https://github.com/PyO3/pyo3" }
-fastobo = { path = "../.." }
 libc = "*"
 url = "*"
 
 opaque_typedef = "*"
 opaque_typedef_macros = "*"
+
+fastobo = { path = "../.." }
+fastobo-py-derive = { path = "../derive" }
