--- a/fastobo-py/Cargo.toml
+++ b/fastobo-py/Cargo.toml
@@ -1,9 +1,11 @@
+[workspace]
+members = ["fastobo", "derive", "fastobo-syntax"]
+
 [package]
 name = "fastobo-py"
 version = "0.1.0"
 authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
 publish = false
-workspace = "../.."
 
 [lib]
 crate-type = ["cdylib"]
@@ -11,13 +13,16 @@ name = "fastobo_py"
 path = "lib.rs"
 
 [dependencies]
-pyo3 = { path = "/home/althonos/Code/pyo3/pyo3" }
-#pyo3 = { git = "https://github.com/PyO3/pyo3" }
+pyo3 = { git = "https://github.com/PyO3/pyo3" }
 libc = "*"
 url = "*"
 
 opaque_typedef = "*"
 opaque_typedef_macros = "*"
 
-fastobo = { path = "../.." }
-fastobo-py-derive = { path = "../derive" }
+fastobo = { path = "fastobo" }
+fastobo-py-derive = { path = "derive" }
+
+
+[profile.release]
+lto = true
