--- a/fastobo-py/setup.cfg
+++ b/fastobo-py/setup.cfg
@@ -9,5 +9,14 @@ home-page = https://github.com/althonos/fastobo
 [options]
 zip_safe = false
 
+[tomlgen_rust]
+create-workspace = true
+
 [build_rust]
-release = false
+release = true
+
+[aliases]
+build_rust = tomlgen_rust build_rust
+build_ext = tomlgen_rust build_ext
+bdist_wheel = tomlgen_rust bdist_wheel
+bdist_egg = tomlgen_rust bdist_egg
