Add some tests for `fastobo.header.FormatVersionClause` in `fastobo-py`

--- a/fastobo-py/setup.cfg
+++ b/fastobo-py/setup.cfg
@@ -5,9 +5,9 @@ author = Martin Larralde
 author-email = martin.larralde@ens-paris-saclay.fr
 home-page = https://github.com/althonos/fastobo
 
-
 [options]
 zip_safe = false
+test_suite = tests
 
 [tomlgen_rust]
 create-workspace = true
