--- a/fastobo/Cargo.toml
+++ b/fastobo/Cargo.toml
@@ -34,6 +34,10 @@ url = "1.7.2"
 fastobo-syntax = { path = "../fastobo-syntax", version = "0.1.0" }
 opaque_typedef = "0.0.5"
 opaque_typedef_macros = "0.0.5"
+memchr = { version = "2.2.0", optional = true }
+
+[features]
+default = ["memchr"]
 
 [dev-dependencies]
 reqwest = "0.9.12"
