Upgrade dependencies in `Cargo.toml`

--- a/fastobo-py/Cargo.toml
+++ b/fastobo-py/Cargo.toml
@@ -14,11 +14,11 @@ path = "fastobo-py/lib.rs"
 
 [dependencies]
 pyo3 = { git = "https://github.com/PyO3/pyo3" }
-libc = "*"
-url = "*"
+libc = "0.2.51"
+url = "1.7.2"
 
-opaque_typedef = "*"
-opaque_typedef_macros = "*"
+opaque_typedef = "0.0.5"
+opaque_typedef_macros = "0.0.5"
 
 fastobo = { path = "fastobo" }
 fastobo-py-derive = { path = "derive" }
