--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,11 @@ stages:
   before_install:
     - ci/travis/setup.sh
   before_script:
-    - cd $TRAVIS_BUILD_DIR/fastobo-py && python setup.py build_ext --inplace
+    - python setup.py build_ext --inplace
   script:
-    - cd $TRAVIS_BUILD_DIR/fastobo-py && python setup.py test
+    - python setup.py test
+  after_success:
+    - ci/travis/deploy.sh
 
 jobs:
   include:
