Only cargo-test `fastobo` in Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ stages:
   before_install:
     - ci/travis/setup.sh
   script:
-    - cargo tarpaulin -v --out Xml --ciserver travis-ci
+    - cargo tarpaulin -v -p fastobo --out Xml --ciserver travis-ci
   after_script:
     - curl -SsL "https://codecov.io/bash" | bash
 
