Use `manylinux` image to build `fastobo-py` wheels

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,28 +35,30 @@ stages:
       - $HOME/.cargo
       - $HOME/.cache/pip
       - $TRAVIS_BUILD_DIR/target
+  services:
+    - docker
   before_install:
     - ci/travis/setup.sh
   before_script:
     - python setup.py build_ext --inplace
   script:
     - python setup.py test
-  after_success:
-    - ci/travis/deploy.sh
 
 jobs:
   include:
-    - rust: stable
-      <<: *test-rust
-    - rust: beta
-      <<: *test-rust
-    - rust: nightly
-      <<: *test-rust
-    - python: 3.5
-      <<: *test-python
-    - python: 3.6
-      <<: *test-python
+    # - rust: stable
+    #   <<: *test-rust
+    # - rust: beta
+    #   <<: *test-rust
+    # - rust: nightly
+    #   <<: *test-rust
+    # - python: 3.5
+    #   <<: *test-python
+    # - python: 3.6
+    #   <<: *test-python
     - python: 3.7
+      after_success:
+        - ci/travis/deploy.sh
       <<: *test-python
 
 # deploy:
