--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,10 @@ author = Martin Larralde
 author-email = martin.larralde@ens-paris-saclay.fr
 home-page = https://github.com/althonos/fastobo
 description = Faultless AST for Open Biomedical Ontologies.
-long-description = file: fastobo-py/README.rst
+long-description = file: fastobo-py/README.md
 long_description_content_type = text/markdown
 license = MIT
+platform = any
 keywords = ontologies, ontology, obo, obofoundry, parser, syntax, ast
 classifiers =
     Development Status :: 3 - Alpha
