--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ env:
     - RUSTC_WRAPPER=sccache
     - SCCACHE_DIR="$HOME/.cache/sccache"
 
+git:
+  depth: false
+
 stages:
   - name: Rust
   - name: Python
