--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,10 @@ classifiers =
     Intended Audience :: Healthcare Industry
     License :: OSI Approved :: MIT License
     Programming Language :: Rust
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: Implementation :: CPython
     Topic :: Scientific/Engineering :: Bio-Informatics
     Topic :: Scientific/Engineering :: Medical Science Apps.
     Topic :: Software Development :: Libraries :: Python Modules
