Add project links to `setup.cfg`

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,13 +24,26 @@ classifiers =
     Topic :: Scientific/Engineering :: Bio-Informatics
     Topic :: Scientific/Engineering :: Medical Science Apps.
     Topic :: Software Development :: Libraries :: Python Modules
+project_urls =
+    Bug Reports = https://github.com/althonos/fastobo/issues
+    Changelog = https://fastobo.readthedocs.io/en/latest/changes.html
+    Documentation = https://fastobo.readthedocs.io/en/latest/
 
 [options]
 zip_safe = false
 test_suite = tests
+python_requires = >= 3.5.*
 setup_requires =
     setuptools
     setuptools-rust
+
+[bdist_wheel]
+universal = false
+
+[check]
+metadata = true
+restructuredtext = false
+strict = true
 
 [build_rust]
 release = true
