--- a/fastobo-py/Cargo.toml
+++ b/fastobo-py/Cargo.toml
@@ -10,6 +10,7 @@ name = "fastobo_py"
 
 [dependencies]
 pyo3 = { git = "https://github.com/PyO3/pyo3" }
+pest = "*"
 libc = "0.2.51"
 url = "1.7.2"
 
