Make sure to run all doctests in `tests/test_doctests.py`

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,8 @@ python_requires = >= 3.5.*
 setup_requires =
     setuptools
     setuptools-rust
+tests_require =
+    requests
 
 [bdist_wheel]
 universal = false
