--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
     - RUST_BACKTRACE=1
     - RUSTC_WRAPPER="$HOME/.cargo/bin/sccache"
     - SCCACHE_DIR="$HOME/.cache/sccache"
+    - PYTHON_SYS_EXECUTABLE="python3"
 
 git:
   depth: false
