--- a/fastobo/Cargo.toml
+++ b/fastobo/Cargo.toml
@@ -40,8 +40,9 @@ memchr = { version = "2.2.0", optional = true }
 default = ["memchr"]
 
 [dev-dependencies]
-reqwest = "0.9.15"
 lazy_static = "1.3.0"
 obofoundry = "0.1.2"
+pretty_assertions = "0.6.1"
+reqwest = "0.9.15"
 serde_yaml = "0.8.8"
 textwrap = "0.11.0"
