--- a/fastobo2owl/Cargo.toml
+++ b/fastobo2owl/Cargo.toml
@@ -11,3 +11,8 @@ horned-owl = "0.5.0"
 failure = "0.1.5"
 curie = "0.0.8"
 either = "1.5.2"
+
+[dev-dependencies]
+curie = "0.0.8"
+lazy_static = "1.3.0"
+pretty_assertions = "0.6.1"
