--- a/fastobo2owl/Cargo.toml
+++ b/fastobo2owl/Cargo.toml
@@ -7,7 +7,7 @@ workspace = ".."
 
 [dependencies]
 fastobo = { path = "../fastobo" }
-horned-owl = "0.5.0"
+horned-owl = { git = "https://github.com/althonos/horned-owl"}
 failure = "0.1.5"
 curie = "0.0.8"
 either = "1.5.2"
@@ -16,3 +16,7 @@ either = "1.5.2"
 curie = "0.0.8"
 lazy_static = "1.3.0"
 pretty_assertions = "0.6.1"
+
+[[bin]]
+name = "fastobo2owl"
+path = "bin/fastobo2owl.rs"
