Move `fastobo-py-derive` crate in `fastobo-py` folder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [
   "fastobo",
   "fastobo-syntax",
   "fastobo-py",
-  "fastobo-py-derive",
+  "fastobo-py/derive",
   "fastobo2owl",
 ]
 
