--- a/fastobo-py/Cargo.toml
+++ b/fastobo-py/Cargo.toml
@@ -3,6 +3,7 @@ name = "fastobo-py"
 version = "0.1.0"
 authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
 publish = false
+workspace = ".."
 
 [lib]
 crate-type = ["cdylib"]
@@ -18,4 +19,4 @@ opaque_typedef = "0.0.5"
 opaque_typedef_macros = "0.0.5"
 
 fastobo = { path = "../fastobo" }
-fastobo-py-derive = { path = "../fastobo-py-derive" }
+fastobo-py-derive = { path = "./derive" }
