--- a/fastobo/Cargo.toml
+++ b/fastobo/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 description = "Faultless AST for Open Biomedical Ontologies."
 repository = "https://github.com/althonos/fastobo"
 readme = "README.md"
-keywords = ["obo", "ontology", "obofoundry", "ast", "syntax", "parser"]
+keywords = ["obo", "ontology", "syntax", "ast", "parser"]
 categories = ["science", "parser-implementations"]
 workspace = ".."
 
