Fix `MANIFEST.in` creating sdists with missing Rust crate

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,10 @@
 include setup.*
 include Cargo.toml
 include COPYING
+include README.md
 
-recursive-include fastobo *
-recursive-include fastobo-py *
-recursive-include fastobo-syntax *
+recursive-include fastobo* Cargo.toml COPYING README.md CHANGELOG.md
+recursive-include fastobo* *.rs grammar.pest
 
-exclude target
-recursive-exclude * Cargo.lock
+recursive-exclude fastobo.egg-info *
+recursive-exclude fastobo*/tests *
