Rename `fastobo2owl` crate to `fastobo-owl`

--- a/fastobo-owl/Cargo.toml
+++ b/fastobo-owl/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fastobo2owl"
+name = "fastobo-owl"
 version = "0.1.0"
 authors = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
 edition = "2018"
