--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ repository = "https://github.com/althonos/fastobo"
 readme = "README.md"
 keywords = ["obo", "ontology", "syntax", "ast", "parser"]
 categories = ["science", "parser-implementations"]
-workspace = ".."
 
 [lib]
 name = "fastobo"
@@ -44,3 +43,4 @@ pretty_assertions = "0.6.1"
 serde_yaml = "0.8.8"
 textwrap = "0.11.0"
 ureq = "0.9.1"
+isbn = "0.2.0"
