--- a/.travis.yml
+++ b/.travis.yml
@@ -1,94 +1,35 @@
 sudo: false
 dist: xenial
+language: Rust
+
+rust:
+- stable
+- beta
+- nightly
 
 env:
   global:
     - PATH="$HOME/.cargo/bin:$PATH"
     - RUST_BACKTRACE=1
-    - RUSTC_WRAPPER="$HOME/.cargo/bin/sccache"
-    - SCCACHE_DIR="$HOME/.cache/sccache"
-    - PYTHON_SYS_EXECUTABLE="python3"
 
 git:
   depth: false
 
-stages:
-  - name: Rust
-  - name: Python
-  - name: Python on OSX
+cache:
+  directories:
+    - $HOME/.cargo/bin
+    - $TRAVIS_BUILD_DIR/target
+install:
+- ci/travis/rust/install.sh
 
-.test-rust: &test-rust
-  stage: Rust
-  language: rust
-  cache:
-    directories:
-      - $SCCACHE_DIR
-      #- $HOME/.cargo
-      - $HOME/.cargo/bin
-      - $TRAVIS_BUILD_DIR/target
-  install:
-    - ci/travis/rust/install.sh
-  script:
-    - ci/travis/rust/script.sh
-  after_script:
-    - ci/travis/rust/after_script.sh
-  after_success:
-    - ci/travis/rust/after_success.sh
+script:
+- ci/travis/rust/script.sh
 
-.test-python: &test-python
-  stage: Python
-  language: python
-  cache:
-    directories:
-      - $TRAVIS_BUILD_DIR/target
-  services:
-    - docker
-  before_install:
-    - ci/travis/manylinux/before_install.sh
-  install:
-    - ci/travis/manylinux/install.sh
-  script:
-    - ci/travis/manylinux/script.sh
-  after_success:
-    - ci/travis/manylinux/after_success.sh
+after_script:
+- curl -SsL "https://codecov.io/bash" | bash
 
-.test-python-osx: &test-python-osx
-  stage: Python on OSX
-  os: osx
-  language: generic
-  cache:
-    directories:
-      - $SCCACHE_DIR
-      - $HOME/.cache/pip
-      - $TRAVIS_BUILD_DIR/target
-      - $HOME/Library/Caches/Homebrew
-  install:
-    - ci/travis/osx/install.sh
-  script:
-    - ci/travis/osx/script.sh
-  before_cache:
-    - ci/travis/osx/before_cache.sh
-  after_success:
-    - ci/travis/osx/after_success.sh
-
-jobs:
-  include:
-    - rust: stable
-      <<: *test-rust
-    - rust: beta
-      <<: *test-rust
-    - rust: nightly
-      <<: *test-rust
-    - python: 3.5
-      <<: *test-python
-    - python: 3.6
-      <<: *test-python
-    - python: 3.7
-      <<: *test-python
-    - env: PYTHON=python3.6
-      <<: *test-python-osx
-    - env: PYTHON=python3.7
-      <<: *test-python-osx
+after_success:
+- ci/travis/rust/after_success.sh
 
 notifications:
   email:
