--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,8 @@ fastobo-syntax = "0.3.1"
 memchr = { version = "2.2.0", optional = true }
 
 [features]
-default = ["memchr"]
+default = ["memchr", "ext"]
+ext = []
 
 [dev-dependencies]
 lazy_static = "1.3.0"
