--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,10 +33,16 @@ opaque_typedef_macros = "0.0.5"
 url = "1.7.2"
 fastobo-syntax = "0.3.1"
 memchr = { version = "2.2.0", optional = true }
+fastobo-derive = { version = "0.3.0", optional = true, path = "derive" }
 
 [features]
-default = ["memchr", "ext"]
-ext = []
+default = ["memchr", "ext", "display"]
+# `Display` implementation for all types in `fastobo::ast`
+display = ["_derive"]
+# semantic-related traits such as `OboSemantics` or `CardinalityBound`
+ext = ["_derive"]
+# activate code generation tr
+_derive = ["fastobo-derive"]
 
 [dev-dependencies]
 lazy_static = "1.3.0"
