--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,12 +37,10 @@ fastobo-derive = { version = "0.3.0", optional = true, path = "derive" }
 
 [features]
 default = ["memchr", "ext", "display"]
-# `Display` implementation for all types in `fastobo::ast`
 display = ["_derive"]
-# semantic-related traits such as `OboSemantics` or `CardinalityBound`
 ext = ["_derive"]
-# activate code generation tr
 _derive = ["fastobo-derive"]
+_doc = ["_derive", "ext", "display"]
 
 [dev-dependencies]
 lazy_static = "1.3.0"
