--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,15 +35,12 @@ opaque_typedef = "0.0.5"
 opaque_typedef_macros = "0.0.5"
 url = "1.7.2"
 fastobo-syntax = "0.3.1"
+fastobo-derive = { version = "0.3.0", path = "derive" }
 memchr = { version = "2.2.0", optional = true }
-fastobo-derive = { version = "0.3.0", optional = true, path = "derive" }
 
 [features]
-default = ["memchr", "semantics", "display"]
-display = ["_derive"]
-semantics = ["_derive"]
-_derive = ["fastobo-derive"]
-_doc = ["semantics", "display"]
+default = ["memchr"]
+_doc = []
 
 [dev-dependencies]
 lazy_static = "1.3.0"
