Make `fastobo-derive` a member of the `fastobo` workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ categories = ["science", "parser-implementations"]
 name = "fastobo"
 path = "src/lib.rs"
 
+[workspace]
+members = ["derive"]
+
 [badges.travis-ci]
 repository = "fastobo/fastobo"
 [badges.codecov]
