--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -3,6 +3,7 @@ name = "fastobo-derive"
 version = "0.3.0"
 authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
 edition = "2018"
+workspace = ".."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
