--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,9 @@ err-derive = "0.1.5"
 pest = "2.1.1"
 opaque_typedef = "0.0.5"
 opaque_typedef_macros = "0.0.5"
+ordered-float = "1.0.2"
 url = "1.7.2"
-fastobo-syntax = "0.3.1"
+fastobo-syntax = "0.3.3"
 fastobo-derive-internal = { version = "0.5.0", path = "derive" }
 memchr = { version = "2.2.0", optional = true }
 
