--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,6 @@ lazy_static = "1.3.0"
 obofoundry = "0.4.0"
 pretty_assertions = "0.6.1"
 serde_yaml = "0.8.8"
-textwrap = "0.11.0"
+textwrap-macros = "0.1.0"
 ureq = "0.11.0"
 isbn = "0.2.0"
