--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,9 +42,14 @@ fastobo-syntax = "0.3.7"
 fastobo-derive-internal = { version = "0.7.5", path = "derive" }
 memchr = { version = "2.2.1", optional = true }
 
+num_cpus = { version = "1.12.0", optional = true }
+lazy_static = { version = "1.4.0", optional = true }
+crossbeam-channel = { version = "0.4", optional = true }
+
 [features]
-default = ["memchr"]
-_doc = []
+default = ["memchr", "threading"]
+threading = ["crossbeam-channel", "lazy_static", "num_cpus"]
+_doc = ["threading"]
 
 [dev-dependencies]
 lazy_static = "1.3.0"
