--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fastobo"
-version = "0.7.5"
+version = "0.8.0"
 authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
 edition = "2018"
 license = "MIT"
@@ -39,9 +39,10 @@ opaque_typedef_macros = "0.0.5"
 ordered-float = "1.0.2"
 url = "2.1.0"
 fastobo-syntax = "0.3.8"
-fastobo-derive-internal = { version = "0.7.5", path = "derive" }
+fastobo-derive-internal = { version = "0.8.0", path = "derive" }
+# feature = "memchr"
 memchr = { version = "2.2.1", optional = true }
-
+# feature = "threading"
 num_cpus = { version = "1.12.0", optional = true }
 lazy_static = { version = "1.4.0", optional = true }
 crossbeam-channel = { version = "0.4", optional = true }
