--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,9 +46,11 @@ memchr = { version = "2.2.1", optional = true }
 num_cpus = { version = "1.12.0", optional = true }
 lazy_static = { version = "1.4.0", optional = true }
 crossbeam-channel = { version = "0.4", optional = true }
+# feature = "smartstring"
+smartstring = { version = "0.2.3", optional = true }
 
 [features]
-default = ["memchr", "threading"]
+default = ["memchr", "threading", "smartstring"]
 threading = ["crossbeam-channel", "lazy_static", "num_cpus"]
 _doc = ["threading"]
 
