--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ cache:
 rust:
 - stable
 - beta
-- nightly-2020-06-02
+- nightly
 
 env:
   global:
   - PATH="$HOME/.cargo/bin:$PATH"
-  - RUST_BACKTRACE=1
+  - RUST_BACKTRACE=full
 
 git:
   depth: false
