Update `publish.yml` Actions workflow to support deploying two crates

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
       uses: actions-rs/tarpaulin@v0.1
       with:
         version: '0.16.0'
-        args: '--lib -v --out Xml --ciserver github-actions --no-default-features --features=${{ matrix.feature }}'
+        args: '-v --out Xml --ciserver github-actions --no-default-features --features=${{ matrix.feature }}'
     - name: Upload coverage statistics
       uses: codecov/codecov-action@v1
       with:
