--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,26 @@ on:
       - v*.*.*
 
 jobs:
+  publish-derive:
+    runs-on: ubuntu-latest
+    environment: Crates.io
+    name: Publish derive macros
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v1
+    - name: Setup Rust ${{ matrix.rust-toolchain }}
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+        override: true
+    - name: Package and publish crate
+      uses: actions-rs/cargo@v1
+      with:
+        command: publish
+        args: --manifest-path derive/Cargo.toml --token ${{ secrets.CRATES_IO_TOKEN }}
   publish:
+    needs: publish-impl
     runs-on: ubuntu-latest
     environment: Crates.io
     name: Publish Rust crate
@@ -19,7 +38,7 @@ jobs:
         profile: minimal
         toolchain: stable
         override: true
-    - name: Package and publish
+    - name: Package and publish declaration crate
       uses: actions-rs/cargo@v1
       with:
         command: publish
