--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -92,12 +92,12 @@ jobs:
       uses: codecov/codecov-action@v2
       with:
         flags: ${{ matrix.features }}
-  publish:
-    name: Publish
-    runs-on: ubuntu-latest
-    environment: Crates.io
+  publish-derive:
     needs: test
+    runs-on: ubuntu-latest
     if: "startsWith(github.ref, 'refs/tags/v')"
+    environment: Crates.io
+    name: Publish derive macros
     steps:
     - name: Checkout code
       uses: actions/checkout@v1
@@ -107,8 +107,28 @@ jobs:
         profile: minimal
         toolchain: stable
         override: true
-    - name: Package and publish
+    - name: Package and publish crate
       uses: actions-rs/cargo@v1
       with:
         command: publish
-        args: --token ${{ secrets.CRATES_IO_TOKEN }}
+        args: --manifest-path derive/Cargo.toml --token ${{ secrets.CRATES_IO_TOKEN }}
+  publish:
+    needs: publish-derive
+    runs-on: ubuntu-latest
+    environment: Crates.io
+    if: "startsWith(github.ref, 'refs/tags/v')"
+    name: Publish Rust crate
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v1
+    - name: Setup Rust ${{ matrix.rust-toolchain }}
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+        override: true
+    - name: Package and publish declaration crate
+      uses: actions-rs/cargo@v1
+      with:
+        command: publish
+        args: '--token ${{ secrets.CRATES_IO_TOKEN }}'
