--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,24 +32,25 @@ status     = "actively-developed"
 features = [ "_doc" ]
 
 [dependencies]
+aho-corasick = "0.7.0"
 blanket = "0.2.0"
+circular = "0.3.0"
 thiserror = "1.0.0"
-fastobo-syntax = "0.7.2"
+fastobo-syntax = "0.8.0"
 fastobo-derive-internal = { version = "0.15.0", path = "derive" }
+lazy_static = "1.4.0"
+memchr = "2.2.1"
 ordered-float = "2.0.0"
 pest = "=2.1.3"
-# feature = "memchr"
-memchr = { version = "2.2.1", optional = true }
 # feature = "threading"
 num_cpus = { version = "1.12.0", optional = true }
-lazy_static = { version = "1.4.0", optional = true }
 crossbeam-channel = { version = "0.5", optional = true }
 # feature = "smartstring"
 smartstring = { version = "0.2.3", optional = true }
 
 [features]
-default = ["memchr", "threading", "smartstring"]
-threading = ["crossbeam-channel", "lazy_static", "num_cpus"]
+default = ["threading", "smartstring"]
+threading = ["crossbeam-channel", "num_cpus"]
 _doc = ["threading"]
 
 [dev-dependencies]
