--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -138,10 +138,11 @@ jobs:
     if: "startsWith(github.ref, 'refs/tags/v')"
     name: Release
     needs: publish
+    permissions: write-all
     steps:
     - name: Checkout code
-      uses: actions/checkout@v1
+      uses: actions/checkout@v4
     - name: Release a Changelog
-      uses: rasmus-saks/release-a-changelog-action@v1.0.1
+      uses: rasmus-saks/release-a-changelog-action@v1.2.0
       with:
         github-token: '${{ secrets.GITHUB_TOKEN }}'
